--- a/nutritionandfitness.html
+++ b/nutritionandfitness.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Fitness App</title>
+    <title>Wellfit</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 
     <header class = "header">
-        <h1>Your Fitness App</h1>
+        <h1>Wellfit</h1>
     </header>
 
     <!-- Centered container for tab navigation -->
