--- a/main.html
+++ b/main.html
@@ -1,51 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Health & Fitness Tracker</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Health and Fitness Dashboard</title>
+    <link rel="stylesheet" href="auth.css">
 </head>
 <body>
-  <header>
-    <h1>Health & Fitness Tracker</h1>
-  </header>
+    <header>
+        <h1>Welcome to Your Health & Fitness Dashboard</h1>
+    </header>
 
-  <main>
-    <!-- Login Form -->
-    <div id="login-container">
-      <h2>Login</h2>
-      <form id="login-form">
-        <input type="text" id="username" placeholder="Username" required>
-        <input type="password" id="password" placeholder="Password" required>
-        <button type="submit">Login</button>
-      </form>
-      <p>Don't have an account? <button id="signup-button">Sign Up</button></p>
+    <!-- Meal and Workout Plan Sections -->
+    <div id="meal-plan-content">
+        <div id="meals"></div>
     </div>
 
-    <!-- Signup Form -->
-    <div id="signup-container" style="display: none;">
-      <h2>Sign Up</h2>
-      <form id="signup-form">
-        <input type="text" id="new-username" placeholder="Username" required>
-        <input type="password" id="new-password" placeholder="Password" required>
-        <button type="submit">Sign Up</button>
-      </form>
+    <div id="workout-plan-content">
+        <div id="workouts"></div>
     </div>
 
-    <!-- Meal and Workout Plans -->
-    <div id="meal-plans" style="display: none;">
-      <h2>Meal Plans</h2>
-      <div id="meal-plan-content"></div>
-    </div>
+    <footer>
+        <p>&copy; 2024 Your Health & Fitness Website</p>
+    </footer>
 
-    <div id="workouts" style="display: none;">
-      <h2>Workout Plans</h2>
-      <div id="workout-plan-content"></div>
-    </div>
-  </main>
-
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
